fix: hard to read anchor font color in dark mode

--- a/static/themes/default.css
+++ b/static/themes/default.css
@@ -15,7 +15,7 @@
     --heading-font-style: normal;
     --heading-letter-spacing: inherit;
     --anchor-font-color: var(--color-primary-500);
-    --anchor-font-color-dark: var(--color-primary-500);
+    --anchor-font-color-dark: var(--color-primary-contrast-500);
     --anchor-font-family: inherit;
     --anchor-font-size: inherit;
     --anchor-line-height: inherit;
